Fix: Benerin error migrasi DB, ganti StudentID UUID ke NIM (String) + Update Swagger
